<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PersonCenterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@mipmap/center_background"
        android:id="@+id/rl_user_info">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/civ_head_icon"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/headIcon"
            app:border_width="1dp"
            app:border_color="@color/white"
            android:src="@mipmap/head_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/tv_username"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_alignTop="@+id/civ_head_icon"
            android:layout_toRightOf="@+id/civ_head_icon"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:id="@+id/ll_before_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/before_login"
                android:id="@+id/tv_before_login"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_login"
                android:id="@+id/btn_go_login"
                android:layout_gravity="center_vertical|right"
                android:background="@android:color/transparent"
                android:textColor="@color/blue_A200"
                android:textSize="18sp"
                android:layout_marginRight="16dp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/rl_user_info"
        android:id="@+id/ll_navigation_container">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ll_to_armoire"
            android:background="@drawable/nav_view_background"
            android:clickable="true"
            android:tag="@string/my_armoire"
            android:paddingLeft="16dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_armoire"
                android:contentDescription="@string/my_armoire"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_armoire"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ll_to_body_data"
            android:background="@drawable/nav_view_background"
            android:clickable="true"
            android:tag="@string/body_dataset"
            android:paddingLeft="16dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_body_data"
                android:contentDescription="@string/body_dataset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_dataset"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/grey_200" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ll_to_recommend"
            android:background="@drawable/nav_view_background"
            android:clickable="true"
            android:tag="@string/personal_recommend"
            android:paddingLeft="16dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_recommend"
                android:contentDescription="@string/personal_recommend" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_recommend"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ll_to_collection"
            android:background="@drawable/nav_view_background"
            android:clickable="true"
            android:tag="@string/my_collection"
            android:paddingLeft="16dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_collection"
                android:contentDescription="@string/my_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collection"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/grey_200" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ll_settings"
            android:background="@drawable/nav_view_background"
            android:clickable="true"
            android:tag="@string/settings"
            android:paddingLeft="16dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_settings"
                android:contentDescription="@string/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ll_feedback"
            android:background="@drawable/nav_view_background"
            android:clickable="true"
            android:tag="@string/feedback"
            android:paddingLeft="16dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_feedback"
                android:contentDescription="@string/feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_icon="@mipmap/ic_action_camera"
        fab:fab_colorNormal="@color/amber_A400"
        fab:fab_colorPressed="@color/amber_A700"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"
        android:layout_alignTop="@+id/rl_user_info"
        android:tag="@string/scan"
        android:layout_marginRight="16dp" />
</RelativeLayout>