<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/description"
            android:id="@+id/tv_suit_description"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:id="@+id/iv_itailor_seal"
            android:layout_alignBottom="@+id/tv_suit_description"
            android:layout_alignParentRight="true"
            android:src="@mipmap/itailor_seal"
            android:contentDescription="@string/itailor_seal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/tv_suit_description">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_image"
                    android:background="@null"
                    android:contentDescription="@string/cloth"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignBottom="@+id/iv_image"
                    android:background="#50ffffff">

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:id="@+id/ib_collect"
                        android:background="@android:color/transparent"
                        android:layout_marginRight="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:tag="0"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_suit_pant"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_image_pant"
                    android:background="@null"
                    android:contentDescription="@string/cloth"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignBottom="@+id/iv_image_pant"
                    android:background="#50ffffff">

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:id="@+id/ib_collect_pant"
                        android:background="@android:color/transparent"
                        android:layout_marginRight="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:tag="0"/>
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>